--- a/FrameWorks/Angular16/pedidos-app/src/app/app.component.html
+++ b/FrameWorks/Angular16/pedidos-app/src/app/app.component.html
@@ -1,1 +1,10 @@
-<app-cliente-forme></app-cliente-forme>
+<h1>Sistema de Pedidos</h1>
+<div class="container">
+<app-cliente-form></app-cliente-form>
+<hr>
+<app-produto-form></app-produto-form>
+<hr>
+<app-pedido-form></app-pedido-form>
+<hr>
+<app-pedido-list></app-pedido-list>
+</div>
